--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="./test.php" method="post">
         <p><span>用户名： &nbsp;</span><input type="text" name="username"></p>
         <p><span>密 &nbsp;&nbsp;&nbsp;码： &nbsp;</span><input type="text" name="password"></p>
         <p><span>验证码： &nbsp;</span><input class="vcode" type="text" name="captcha"><img src="/src/index.php"></p>
